[package]
name = "solanabeach"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
reqwest = { version = "0.11.10", features = ["default-tls"] }
serde ={ version ="1.0.136",  features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1", features = ["full"] }